# DBaseRunner

./: .gitignore  README.md  baselines.sh  build.sh  harness.py  inspect_schema.py  k8s-configmap.sh  orchestrate.sh  plot.py  preflight.sh  pyproject.toml  seed_gen.py
.serena/: project.yml
backends/: __init__.py  base.py  jac.py  neo4j.py  postgres.py  sqlalchemy.py
docs/: CLARITY_CONFIRMATION_TASKS.md  HANDOFF.md  HARNESS_CONTEXT.md  HARNESS_REBUILD.html  HARNESS_REVIEW.md  RUN_PLAYBOOK.md  SETUP_EXPLAINED.html
docs/archive/: HANDOFF.md
docs/specs/: 2026-06-13-correctness-oracle.md  2026-06-13-fair-timing-instrumentation.md  2026-06-13-selectivity-type-reconciliation.md  (+2 more)
results/: jac.csv  neo4j.csv  neo4j_meta.json  postgres.csv  postgres_meta.json  sqlalchemy.csv  sqlalchemy_meta.json
seed/: fanout_100.json  fanout_1000.json  fanout_250.json  fanout_500.json  fanout_750.json  manifest.json  selectivity_10.json  selectivity_100.json  selectivity_25.json  selectivity_50.json  selectivity_75.json  selectivity_fixed-target_10.json  selectivity_fixed-target_100.json  selectivity_fixed-target_20.json  selectivity_fixed-target_30.json  selectivity_fixed-target_50.json  selectivity_fixed-target_75.json  selectivity_fixed-total_10.json  selectivity_fixed-total_2.json  selectivity_fixed-total_20.json  selectivity_fixed-total_30.json  selectivity_fixed-total_5.json  selectivity_fixed-total_50.json  selectivity_fixed-total_75.json
servers/sqlalchemy/: pyproject.toml  requirements.txt
servers/sqlalchemy/src/: __init__.py  models.py
servers/sqlalchemy/src/routes/: user.py  walker.py
servers/sqlalchemy/tests/: test_app.py
tests/: test_backends.py  test_harness.py  test_harness_main.py  test_jac_isolation.py  test_plot.py  test_seed_gen.py
(+19 files in other folders)
