[project]
name = "jacdb-harness"
version = "0.1.0"
description = "Unified benchmark harness for JacDB (Figures 5/6): deterministic seeding + 4-backend control plane."
readme = "README.md"
requires-python = ">=3.12"
# Harness RUNTIME deps only. The per-backend servers under servers/ are deployed
# separately (k8s containers) and carry their own deps — they are NOT installed
# into the harness environment.
dependencies = [
    "requests>=2.31",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "matplotlib>=3.8",   # plot.py: figures from results/ CSVs
]

[tool.uv]
# Application-style project: don't try to build/install jacdb-harness itself.
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
# seed/ holds generated data; servers/ run on their own (jaclang / fastapi) stacks.
extend-exclude = ["seed", "servers"]

[tool.pyright]
# Resolve harness imports (requests) against the uv-managed venv so the editor
# stops flagging unresolved imports. servers/ are separate stacks — not analyzed.
venvPath = "."
venv = ".venv"
include = ["backends", "tests", "harness.py", "seed_gen.py", "plot.py"]
exclude = ["servers", "seed", ".venv"]
